--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
             <img src="images/harrypotter-titulo.svg" alt="Logo Harry Potter">
             <div class="divisor"></div>
             <h1 class="nombre-juego">Hermione's Exams Quiz</h1>
-            <div class="iconos-juego">
-                <div class="categoria-juego"><img src="images/icons8-magic-wand-64.png" alt="Varita magica"></div>
-                <div class="categoria-juego"><img src="images/icons8-el-equipo-de-dragón-50.png" alt="Dragon"></div>
-                <div class="categoria-juego"><img src="images/icons8-bruja-90.png" alt="Sombrero seleccionador"></div>
-            </div>
+            <button class="start-btn">Jugar</button>
         </div>
         <img class="hermione" src="images/hermione-2.jpg" alt="Fondo pantalla">
     </div>
