--- a/index.html
+++ b/index.html
@@ -22,5 +22,22 @@
         </div>
         <img class="hermione" src="images/hermione-2.jpg" alt="Fondo pantalla">
     </div>
+
+    <!-- Info Box -->
+    <div class="info-box" id="info-box">
+        <h1 class="info-box-titulo">¿Cómo jugar?</h1>
+        <p>Ayuda a Hermione a aprobar los ÉXTASIS (Exámenes Terribles de Alta Sabiduría e Invocaciones Secretas) para finalizar el séptimo año del Colegio Hogwarts de Magia y Hechicería.</p>
+        <ul class="info-list">
+            <li class="info">1. Solo tendrás 15 segundos para responder cada pregunta.</li>
+            <li class="info">2. Una vez que selecciones una opción, no podrás cambiar tu respuesta.</li>
+            <li class="info">3. No podrás seleccionar ninguna opción luego de que el tiempo haya finalizado.</li>
+            <li class="info">4. Mientras estés jugando, no podrás salir del Quiz.</li>
+        </ul>
+        <div class="botones">
+            <button class="cancel-btnn" id="cancel-btn">Salir</button>
+            <button class="start-btn" id="start-btn">Continuar</button>
+        </div>
+    </div>
+
 </body>
 </html>
