--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <img src="images/harrypotter-titulo.svg" alt="Logo Harry Potter">
             <div class="divisor"></div>
             <h1 class="nombre-juego">Hermione's Exams Quiz</h1>
-            <button class="start-btn">Jugar</button>
+            <button class="quiz-btn start-btn">Jugar</button>
         </div>
         <img class="hermione" src="images/hermione-2.jpg" alt="Fondo pantalla">
+        <img class="hermione-mobile" src="images/hermione.jpg" alt="Fondo pantalla">
     </div>
 
     <!-- Info Box -->
@@ -34,8 +35,8 @@
             <li class="info">4. Mientras estés jugando, no podrás salir del Quiz.</li>
         </ul>
         <div class="botones">
-            <button class="cancel-btnn" id="cancel-btn">Salir</button>
-            <button class="start-btn" id="start-btn">Continuar</button>
+            <button class="quiz-btn cancel-btn" id="cancel-btn">Salir</button>
+            <button class="quiz-btn start-btn" id="start-btn">Continuar</button>
         </div>
     </div>
 
