--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Info Box -->
     <div class="info-box" id="info-box">
         <h1 class="info-box-titulo">¿Cómo jugar?</h1>
-        <p>Ayuda a Hermione a aprobar los ÉXTASIS (Exámenes Terribles de Alta Sabiduría e Invocaciones Secretas) para finalizar el séptimo año del Colegio Hogwarts de Magia y Hechicería.</p>
+        <p class="info-box-frase">Ayuda a Hermione a aprobar los ÉXTASIS (Exámenes Terribles de Alta Sabiduría e Invocaciones Secretas) para finalizar el séptimo año del Colegio Hogwarts de Magia y Hechicería.</p>
         <ul class="info-list">
             <li class="info">1. Solo tendrás 15 segundos para responder cada pregunta.</li>
             <li class="info">2. Una vez que selecciones una opción, no podrás cambiar tu respuesta.</li>
