quiz box estructura

--- a/index.html
+++ b/index.html
@@ -39,6 +39,34 @@
             <button class="quiz-btn start-btn" id="start-btn">Continuar</button>
         </div>
     </div>
+    
+    <!-- Quiz Box -->
+    <div class="quiz-box">
+        <div class="header-quiz-box">
+            <h1 class="quiz-box-titulo">Hermione's Exams Quiz</h1>
+            <div class="timer">
+                <div class="time-text">Tiempo restante</div>
+                <div class="timer-sec">15</div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="question-text">
+                <h2>Pregunta 1</h2>
+            </div>
+            <ul class="option-list">
+                <li class="option">Opcion 1</li>
+                <li class="option">Opcion 2</li>
+                <li class="option">Opcion 3</li>
+                <li class="option">Opcion 4</li>
+            </ul>
+        </div>
+        <div class="quiz-box-footer">
+            <div class="total-questions">
+                <p>2 de 5 preguntas</p>
+            </div>
+            <button class="quiz-btn next-btn">Siguiente pregunta</button>
+        </div>
+    </div>
 
 </body>
 </html>
