--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&family=Yusei+Magic&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -45,7 +46,7 @@
         <div class="header-quiz-box">
             <h1 class="quiz-box-titulo">Hermione's Exams Quiz</h1>
             <div class="timer">
-                <div class="time-text">Tiempo restante</div>
+                <div class="timer-text">Tiempo restante</div>
                 <div class="timer-sec">15</div>
             </div>
         </div>
@@ -54,14 +55,15 @@
                 <h2>Pregunta 1</h2>
             </div>
             <ul class="option-list">
-                <li class="option">Opcion 1</li>
-                <li class="option">Opcion 2</li>
-                <li class="option">Opcion 3</li>
-                <li class="option">Opcion 4</li>
+                <li class="option"><span>Opcion 1</span><div class="icon tick"><i class="fas fa-check"></i></div></li>
+                <li class="option"><span>Opcion 2</span><div class="icon cross"><i class="fas fa-times"></i></div></li>
+                <li class="option"><span>Opcion 3</span></li>
+                <li class="option"><span>Opcion 4</span></li>
+                <li class="option"><span>Opcion 5</span></li>
             </ul>
         </div>
         <div class="quiz-box-footer">
-            <div class="total-questions">
+            <div class="total-preguntas">
                 <p>2 de 5 preguntas</p>
             </div>
             <button class="quiz-btn next-btn">Siguiente pregunta</button>
