--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
                 <div class="timer-sec">15</div>
             </div>
         </div>
-        <div class="section">
-            <div class="question-text">
-                <h2>Pregunta 1</h2>
-            </div>
+        <section class="question-section">
+            <h2 class="question-text">Pregunta 1</h2>
             <ul class="option-list">
                 <li class="option"><span>Opcion 1</span><div class="icon tick"><i class="fas fa-check"></i></div></li>
                 <li class="option"><span>Opcion 2</span><div class="icon cross"><i class="fas fa-times"></i></div></li>
@@ -61,7 +59,7 @@
                 <li class="option"><span>Opcion 4</span></li>
                 <li class="option"><span>Opcion 5</span></li>
             </ul>
-        </div>
+        </section>
         <div class="quiz-box-footer">
             <div class="total-preguntas">
                 <p>2 de 5 preguntas</p>
