--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
             </div>
         </div>
         <section class="question-section">
-            <h2 class="question-text">Pregunta 1</h2>
+            <h2 class="question-text"> Lumos es el hechizo que produce luz de la varita del usuario. ¿Qué hechizo lo apaga?</h2>
             <ul class="option-list">
-                <li class="option"><span>Opcion 1</span><div class="icon tick"><i class="fas fa-check"></i></div></li>
-                <li class="option"><span>Opcion 2</span><div class="icon cross"><i class="fas fa-times"></i></div></li>
-                <li class="option"><span>Opcion 3</span></li>
-                <li class="option"><span>Opcion 4</span></li>
-                <li class="option"><span>Opcion 5</span></li>
+                <li class="option"><span>Nox</span><div class="icon tick"><i class="fas fa-check"></i></div></li>
+                <li class="option"><span>Expelliarmus</span><div class="icon cross"><i class="fas fa-times"></i></div></li>
+                <li class="option"><span>Accio</span></li>
+                <li class="option"><span>Expecto Patronum</span></li>
+                <li class="option"><span>Serpensortia</span></li>
             </ul>
         </section>
         <div class="quiz-box-footer">
             <div class="total-preguntas">
-                <p>2 de 5 preguntas</p>
+                <p><span>2</span> de <span>5</span> preguntas</p>
             </div>
             <button class="quiz-btn next-btn">Siguiente pregunta</button>
         </div>
