--- a/index.html
+++ b/index.html
@@ -68,5 +68,20 @@
         </div>
     </div>
 
+    <!-- Result Box -->
+    <div class="result-box">
+        <div class="icon">
+            <i class="fas fa-crown"></i>
+        </div>
+        <div class="result-text">¡Has completado los exámenes con éxito!</div>
+        <div class="score-text">
+            <p>Tu puntuación es de <span>5</span> sobre <span>10</span></p>
+        </div>
+        <div class="buttons">
+            <button class="restart">Volver a jugar</button>
+            <button class="quit">Salir del quiz</button>
+        </div>
+    </div>
+
 </body>
 </html>
