--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Quiz Box -->
     <div class="quiz-box">
         <div class="header-quiz-box">
-            <h1 class="quiz-box-titulo">Hermione's Exams Quiz</h1>
+            <h1 class="quiz-box-titulo">Pregunta <span>1</span></h1>
             <div class="timer">
                 <div class="timer-text">Tiempo restante</div>
                 <div class="timer-sec">15</div>
@@ -71,15 +71,15 @@
     <!-- Result Box -->
     <div class="result-box">
         <div class="icon">
-            <i class="fas fa-crown"></i>
+            <i class="fas fa-award"></i>
         </div>
         <div class="result-text">¡Has completado los exámenes con éxito!</div>
         <div class="score-text">
             <p>Tu puntuación es de <span>5</span> sobre <span>10</span></p>
         </div>
         <div class="buttons">
-            <button class="restart">Volver a jugar</button>
-            <button class="quit">Salir del quiz</button>
+            <button class="quiz-btn restart">Volver a jugar</button>
+            <button class="quiz-btn quit">Salir del juego</button>
         </div>
     </div>
 
