--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="score-text">
             <p>Tu puntuación es de <span>5</span> sobre <span>10</span></p>
         </div>
-        <div class="buttons">
+        <div class="botones">
             <button class="quiz-btn restart">Volver a jugar</button>
-            <button class="quiz-btn quit">Salir del juego</button>
+            <button class="quiz-btn cancel-btn">Salir del juego</button>
         </div>
     </div>
 
