--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Info Box -->
-    <div class="info-box" id="info-box">
+    <div class="info-box desactivado" id="info-box">
         <h1 class="info-box-titulo">¿Cómo jugar?</h1>
         <p class="info-box-frase">Ayuda a Hermione a aprobar los ÉXTASIS (Exámenes Terribles de Alta Sabiduría e Invocaciones Secretas) para finalizar el séptimo año del Colegio Hogwarts de Magia y Hechicería.</p>
         <ul class="info-list">
@@ -42,7 +42,7 @@
     </div>
     
     <!-- Quiz Box -->
-    <div class="quiz-box">
+    <div class="quiz-box desactivado">
         <div class="header-quiz-box">
             <h1 class="quiz-box-titulo">Pregunta <span>1</span></h1>
             <div class="timer">
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Result Box -->
-    <div class="result-box">
+    <div class="result-box desactivado">
         <div class="icon">
             <i class="fas fa-award"></i>
         </div>
