--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <button class="quiz-btn cancel-btn">Salir del juego</button>
         </div>
     </div>
+    <script src="js/questions.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
