cargar preguntas dinamicamente

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             </div>
         </div>
         <section class="question-section">
-            <h2 class="question-text"> Lumos es el hechizo que produce luz de la varita del usuario. ¿Qué hechizo lo apaga?</h2>
+            <h2 class="question-text"></h2>
             <ul class="option-list">
-                <li class="option"><span>Nox</span><div class="icon tick"><i class="fas fa-check"></i></div></li>
+                <!-- <li class="option"><span>Nox</span><div class="icon tick"><i class="fas fa-check"></i></div></li>
                 <li class="option"><span>Expelliarmus</span><div class="icon cross"><i class="fas fa-times"></i></div></li>
                 <li class="option"><span>Accio</span></li>
                 <li class="option"><span>Expecto Patronum</span></li>
-                <li class="option"><span>Serpensortia</span></li>
+                <li class="option"><span>Serpensortia</span></li> -->
             </ul>
         </section>
         <div class="quiz-box-footer">
