numero pregunta dinamico

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Quiz Box -->
     <div class="quiz-box desactivado">
         <div class="header-quiz-box">
-            <h1 class="quiz-box-titulo">Pregunta <span>1</span></h1>
+            <h1 class="quiz-box-titulo">Pregunta <span></span></h1>
             <div class="timer">
                 <div class="timer-text">Tiempo restante</div>
                 <div class="timer-sec">15</div>
@@ -52,17 +52,11 @@
         </div>
         <section class="question-section">
             <h2 class="question-text"></h2>
-            <ul class="option-list">
-                <!-- <li class="option"><span>Nox</span><div class="icon tick"><i class="fas fa-check"></i></div></li>
-                <li class="option"><span>Expelliarmus</span><div class="icon cross"><i class="fas fa-times"></i></div></li>
-                <li class="option"><span>Accio</span></li>
-                <li class="option"><span>Expecto Patronum</span></li>
-                <li class="option"><span>Serpensortia</span></li> -->
-            </ul>
+            <ul class="option-list"></ul>
         </section>
         <div class="quiz-box-footer">
             <div class="total-preguntas">
-                <p><span>2</span> de <span>5</span> preguntas</p>
+                <p><span class="question-numb"></span> de <span>10</span> preguntas</p>
             </div>
             <button class="quiz-btn next-btn">Siguiente pregunta</button>
         </div>
