chequear respuesta correcta

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
         <div class="quiz-box-footer">
             <div class="total-preguntas">
-                <p><span class="question-numb"></span> de <span>10</span> preguntas</p>
+                <p><span class="question-numb"></span> de <span class="question-total"></span> preguntas</p>
             </div>
             <button class="quiz-btn next-btn">Siguiente pregunta</button>
         </div>
