indicador linea tiempo

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <div class="timer-text">Tiempo restante</div>
                 <div class="timer-sec"></div>
             </div>
+            <div class="time-line"></div>
         </div>
         <section class="question-section">
             <h2 class="question-text"></h2>
