--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1 class="quiz-box-titulo">Pregunta <span></span></h1>
             <div class="timer">
                 <div class="timer-text">Tiempo restante</div>
-                <div class="timer-sec"></div>
+                <div class="timer-sec">15</div>
             </div>
             <div class="time-line"></div>
         </div>
