mensaje e iconos segun score resultado

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <!-- Result Box -->
     <div class="result-box desactivado">
         <div class="icon">
-            <i class="fas fa-award"></i>
+            <i class="fas"></i>
         </div>
-        <div class="result-text">¡Has completado los exámenes con éxito!</div>
+        <div class="result-text"></div>
         <div class="score-text">
-            <p>Tu puntuación es de <span>5</span> sobre <span>10</span></p>
+            <p>Tu puntuación es de <span class="user-score"></span> sobre <span class="total-question"></span></p>
         </div>
         <div class="botones">
             <button class="quiz-btn restart">Volver a jugar</button>
