boton restart eliminado

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="total-preguntas">
                 <p><span class="question-numb"></span> de <span class="question-total"></span> preguntas</p>
             </div>
-            <button class="quiz-btn next-btn">Siguiente pregunta</button>
+            <button class="quiz-btn next-btn">Siguiente</button>
         </div>
     </div>
 
@@ -73,7 +73,6 @@
             <p>Tu puntuación es de <span class="user-score"></span> sobre <span class="total-question"></span></p>
         </div>
         <div class="botones">
-            <button class="quiz-btn restart">Volver a jugar</button>
             <button class="quiz-btn cancel-btn">Salir del juego</button>
         </div>
     </div>
